<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_are_catched"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:gravity="center"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/replay"
        android:layout_width="224dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:text="@string/replay"
        android:textSize="20sp"
        android:textStyle="italic|bold"
        app:cornerRadius="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/levels"
        android:layout_width="224dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:text="@string/levels"
        android:textSize="20sp"
        android:textStyle="italic|bold"
        app:cornerRadius="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/replay" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        android:layout_width="224dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:text="@string/main_menu"
        android:textSize="20sp"
        android:textStyle="italic|bold"
        app:cornerRadius="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/levels" />

</androidx.constraintlayout.widget.ConstraintLayout>