<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainMenuFragment">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/background_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/getBonus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/get_bonus"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="italic|bold"
        app:cornerRadius="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="59:59"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginEnd="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/getBonus"
        app:layout_constraintEnd_toStartOf="@+id/getBonus"
        app:layout_constraintTop_toTopOf="@+id/getBonus" />

    <ImageView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:src="@drawable/main_title"
        app:layout_constraintBottom_toTopOf="@+id/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/start"
        android:layout_width="224dp"
        android:layout_height="64dp"
        android:layout_marginBottom="16dp"
        android:text="@string/start"
        android:textSize="20sp"
        android:textStyle="italic|bold"
        app:cornerRadius="2dp"
        app:layout_constraintBottom_toTopOf="@+id/levels"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/levels"
        android:layout_width="224dp"
        android:layout_height="64dp"
        android:layout_marginBottom="16dp"
        android:text="@string/levels"
        android:textSize="20sp"
        android:textStyle="italic|bold"
        app:cornerRadius="2dp"
        app:layout_constraintBottom_toTopOf="@+id/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings"
        android:layout_width="224dp"
        android:layout_height="64dp"
        android:text="@string/settings"
        android:textSize="20sp"
        android:textStyle="italic|bold"
        app:cornerRadius="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/levels" />

</androidx.constraintlayout.widget.ConstraintLayout>